--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <ul>
     <center>
  <li><a href="" class="active-menu">Inicio</a></li> 
-    <li><a href="http://127.0.0.1:5500/Presentacion.html  " class="enlace">Presentacion de mi Pagina</a></li>
+    <li><a href="" onclick="return openPresent()"  class="enlace">Presentacion de mi Pagina</a></li>
     <li><a href="noticias.html" class="enlace">Articulos de prensa</a></li>
     <li><a href="" class="enlace">Sobre el mundo</a></li>
 </center>
