--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 <ul>
     <center>
  <li><a href="" class="active-menu">Inicio</a></li> 
-    <li><a href="" onclick="return openPresent()"  class="enlace">Presentacion de mi Pagina</a></li>
+    <li><a href="" onclick="return openPresent()"  class="enlace">Presentación</a></li>
     <li><a href="noticias.html" class="enlace">Articulos de prensa</a></li>
-    <li><a href="" class="enlace">Sobre el mundo</a></li>
 </center>
 </ul>
 </div>
@@ -233,13 +232,11 @@
 
 <section class="sidebar">
     <section id="buscar">
-<h2 class="encabezado-sidebar">Buscar</h2>
+<h2 class="encabezado-sidebar"></h2>
 <form>
  <button onclick="return openBio();" class="buton">Biografia de Omar</button>
 </form>
 <a href=""></a>
-        <a href="">Noticias</a>
-        <a href="">Sobre el mundo</a>
     </section>
 
   
@@ -248,40 +245,7 @@
 
 
 </section>
-
-<div class="sticky-container">
-    <ul class="sticky">
-
-        <li>
-            <img src="Imga/fotos/12.png" width="32" height="32">
-            <p><a href="" target="_blank"><br>Twitter</a></p>
-        </li>
-        <li>
-            <img src="Imga/fotos/11.jpg" width="32" height="32">
-            <p><a href="" target="_blank"><br>obarrientosve@gmail.com</a></p>
-        </li>
-        
-        
-        <li>
-            <img src="Imga/fotos/13.png" width="30" height="30">
-            <p><a href="" target="_blank"><br>Teléfono: 0242140436</a></p>
-        </li>
-    </ul>
-</div>
 <script src="script.js"></script>
-<div class="nuevoof">
-    <span style=" color: white; font-size: 23px; line-height: normal;">
-        <center>
-        <p> Creadores de la pagina web "Duarte Victor y Torres Yulio" <br>
-            Contactos : duartedvictor@gmail.com
-            <br>
-            yulieens.13@gmail.com
-        <br>
-        Para mayor informacion : 04165180187
-        <br>
-        </p>
-    </span>
-</center>
 </div>
 </body>
 </html>
