--- a/salud.html
+++ b/salud.html
@@ -18,35 +18,51 @@
     <h1> AGUA EMBOTELLADA CONTAMINANTE</h1>
 </center>
 <div>
-    El agua de la tubería  no es potable. Compre la embotellada para beber, bañarse y preparar los alimentos”; durante varias décadas, a través de medios de comunicación y publicidad han sembrado esta creencia en la población.
-    -	El agua del acueducto es sometida a un estricto proceso, desde los embalses hasta los hogares. La sedimentan, eliminan las partículas grandes y microscópicas; los olores, sabores,  con procedimientos físicos y químicos; acaban con las bacterias y virus, mediante  desinfección con cloro decía doña Carmen a su vecino.
+    El &nbsp; agua &nbsp; de &nbsp; la&nbsp; tubería&nbsp;  no &nbsp;es &nbsp;potable. &nbsp;Compre &nbsp;la &nbsp;embotellada &nbsp;para &nbsp;beber, &nbsp;bañarse&nbsp; y &nbsp;preparar &nbsp;los &nbsp;alimentos”; &nbsp;durante &nbsp; varias &nbsp; décadas, &nbsp;a &nbsp; través &nbsp;de &nbsp; medios &nbsp; de comunicación &nbsp; y publicidad &nbsp; han sembrado &nbsp; esta creencia&nbsp; en la población.
+    <br>
+    -	El &nbsp;agua &nbsp;del acueducto &nbsp;es sometida &nbsp; a un &nbsp;estricto&nbsp; proceso, &nbsp;desde &nbsp;los embalses &nbsp; hasta &nbsp; los hogares. &nbsp;La sedimentan, &nbsp;eliminan las partículas&nbsp; grandes &nbsp; y microscópicas;&nbsp; los olores, &nbsp; sabores,  &nbsp;con procedimientos &nbsp;físicos &nbsp;y químicos; &nbsp; acaban &nbsp; con &nbsp;las &nbsp;bacterias &nbsp; y virus,&nbsp; mediante  &nbsp;desinfección &nbsp;con cloro&nbsp; decía &nbsp;doña Carmen &nbsp;a su &nbsp;vecino.
+  <br>
     -	 Quedaron años atrás, cuando se solicitaba agua, la servían fría y con mucho gusto y al preguntar por su valor,  respondían: “nada, el agua no se vende.”
-    -	Ciertamente, la campaña de las embotelladoras impuso su criterio consumista, puro negocio capitalista, facturan más de 1800 millones de dólares al año;   contaminan con los envases de plástico, de donde se desprenden  micro partículas dañinas para el ser humano  y además, al ser desechados,  terminan en el mar, respondiole el señor Augusto. Por cierto, el Parlamento Europeo aprobó impulsar el consumo del agua del grifo, para bajar el uso de la otra. <br></div>
+    <br>
+    -	Ciertamente, &nbsp; la campaña de las embotelladoras impuso su criterio consumista, puro negocio capitalista, &nbsp;facturan más de 1800 millones de dólares al año; &nbsp;  contaminan con los envases de plástico, &nbsp; de donde se desprenden  micro partículas dañinas para el ser humano  y además,&nbsp; al ser desechados, &nbsp;  terminan en el mar, &nbsp; respondiole el señor Augusto. &nbsp; Por cierto, &nbsp;el Parlamento Europeo aprobó impulsar el consumo del agua del grifo,&nbsp; para bajar el uso de la otra. <br></div>
 </div>
     <div id="columna2">
         <center>
         <h1>REFRESCOS DE LA MALA VIDA Y LA MUERTE</h1>
         </center>
-        Las gaseosas o refrescos, usadas en reuniones infantiles, para acompañar comidas o calmar la sed, constituyen un vicio impuesto por sus fabricantes trasnacionales. Su uso habitual y prolongado daña la salud, producen diabetes, obesidad, hipertensión arterial, caries dentales, desnutrición y cálculos renales, enfermedades que disminuyen la calidad de vida y en algunos casos llevan a la muerte.
-        A sus propietarios, poco les importa la salud de la gente. Solo aspiran maximizar las ganancias. Invierten mucho en publicidad, crean necesidades e inventan propiedades que tales bebidas no poseen.
-        Además de diez cucharadillas de azúcar, contiene cafeína, coca, benzoato de sodio y muchos  otros químicos, capaces de afectar la salud y hacerlos adictos   del refresco.
+        Las gaseosas o refrescos, &nbsp;  usadas en reuniones infantiles, &nbsp;  para acompañar comidas o calmar la sed, &nbsp;  constituyen un vicio impuesto por sus fabricantes trasnacionales. &nbsp;  Su uso habitual y prolongado daña la salud, &nbsp;  producen diabetes,  &nbsp;  obesidad,&nbsp;  hipertensión arterial, &nbsp; caries dentales, &nbsp; desnutrición y cálculos renales, &nbsp;  enfermedades que disminuyen la calidad de vida y en algunos casos llevan a la muerte.&nbsp; 
+        A sus propietarios, &nbsp;  poco les importa la salud de la gente. &nbsp;  Solo aspiran maximizar las ganancias. &nbsp; Invierten mucho en publicidad, &nbsp;  crean necesidades e inventan propiedades que tales bebidas no poseen. &nbsp; 
+        Además de diez cucharadillas de azúcar, &nbsp;  contiene cafeína, &nbsp;  coca, &nbsp; benzoato de sodio y muchos  otros químicos, &nbsp;  capaces de afectar la salud y hacerlos adictos &nbsp;   del refresco.&nbsp; 
+        <br>
         -	El gobierno bolivariano debería prohibir su fabricación y embotellamiento, comentaba un paciente diabético a su médico, quien le respondía:
-        -	Usted tiene razón, pero el hábito está muy enraizado,  generan fuentes de trabajo, impuestos y se considerará un ataque a la iniciativa privada; en ningún país han sido prohibidos. Por ahora deberían:  
-        -	1.- Prohibir su venta en centros educativos, deportivos y juveniles;
-         2.- Hacer campañas sobre sus daños y eliminar su publicidad en medios de comunicación,  eventos, calles  o directamente al público; 
-         3.- Estimular el consumo de bebidas preparadas caseramente con frutas naturales sin azúcar; 
-         4.- Enseñar en las escuelas la inconveniencia de su consumo y daño a la salud; 
-         5.- Colocar etiquetas sobre el riesgo de consumirlas como se hace con licores y cigarrillos.
+       <br>
+        -	Usted tiene razón, pero el hábito está muy enraizado, &nbsp; generan fuentes de trabajo, &nbsp; impuestos y se considerará un ataque a la iniciativa privada; &nbsp; en ningún país han sido prohibidos. &nbsp;Por ahora deberían:  
+       <br>
+        -	1.- Prohibir su venta en centros educativos, &nbsp; deportivos y juveniles;
+        <br>
+        2.- Hacer campañas sobre sus daños y eliminar su publicidad en medios de comunicación, &nbsp; eventos, &nbsp; calles  o directamente al público; 
+        <br>
+        3.- Estimular el consumo de bebidas preparadas caseramente con frutas naturales sin azúcar; 
+        <br>
+        4.- Enseñar en las escuelas la inconveniencia de su consumo y daño a la salud; 
+        <br>
+        5.- Colocar etiquetas sobre el riesgo de consumirlas como se hace con licores y cigarrillos.
         </div>
 <div id="columna3">
     <center>
     <h1>TOMADERA PELIGROSA</h1>
 </center>
-    <br> <br> &nbsp; &nbsp; &nbsp; &nbsp; 	Si te cuidas, &nbsp; &nbsp; me cuidas, &nbsp; &nbsp; si yo me cuido te cuido. &nbsp;  ¡Cuidémonos! &nbsp; Es &nbsp; el &nbsp;emblema &nbsp; del &nbsp; gobierno &nbsp;bolivariano &nbsp; y &nbsp;de &nbsp;la &nbsp; Organización&nbsp; Mundial &nbsp; de &nbsp;la &nbsp; Salud. &nbsp; Hagámoslo nuestra, mía,  tuya y de los todos. Las variantes  bolsonaros de Brasil, ya están en esta Patria de Bolívar y Chávez enfermando a miles y matando a muchos, por el megáfono perifoneaba la vocera del consejo comunal, mientras varios caballeros ingerían licor en la entrada del bloque.
-     -   	 Coño yo me voy a casa, vayámonos todos. Conminaba a los otros, uno de los tomadores, al tiempo que les decía adiós a sus compañeros.
-    -	A ese carajo Juan, con cualquier vaina lo asustan. Yo en el Metro uso el tapaboca porque lo exigen, pero en cuanto se descuidan me lo bajo de la nariz, expresó Roberto. 
-    Los días pasaron y los amigos se encontraron nuevamente. Extrañados por la falta de Roberto, cuando vieron pasar al hermano le preguntaron por él.
-    -	Está hospitalizado en el Poliedro, lo llevamos asfixiándose por el Covid, fue la respuesta.
+    <br> <br> &nbsp; &nbsp; &nbsp; &nbsp; 	Si te cuidas, &nbsp; &nbsp; me cuidas, &nbsp; &nbsp; si yo me cuido te cuido. &nbsp;  ¡Cuidémonos! &nbsp; Es &nbsp; el &nbsp;emblema &nbsp; del &nbsp; gobierno &nbsp;bolivariano &nbsp; y &nbsp;de &nbsp;la &nbsp; Organización&nbsp; Mundial &nbsp; de &nbsp;la &nbsp; Salud. &nbsp; Hagámoslo nuestra, &nbsp; mía, &nbsp;  tuya y de los todos.  &nbsp;Las variantes  bolsonaros de Brasil, &nbsp; ya están en esta Patria de Bolívar y Chávez enfermando a miles y matando a muchos, &nbsp; por el megáfono perifoneaba la vocera del consejo comunal, &nbsp; mientras varios caballeros ingerían licor en la entrada del bloque.
+     <br>
+     <br>
+    -   	 Coño yo me voy a casa, &nbsp;vayámonos todos. &nbsp;Conminaba a los otros, &nbsp; uno de los tomadores, &nbsp;al tiempo que les decía adiós a sus compañeros.
+  <br>
+  <br>
+     -	A ese carajo Juan, &nbsp;con cualquier vaina lo asustan. &nbsp; Yo en el Metro uso el tapaboca porque lo exigen, &nbsp; pero en cuanto se descuidan me lo bajo de la nariz, &nbsp; expresó Roberto. 
+    Los días pasaron y los amigos se encontraron nuevamente. &nbsp; Extrañados por la falta de Roberto, &nbsp; cuando vieron pasar al hermano le preguntaron por él.
+    <br>
+    <br>
+    -	Está hospitalizado en el Poliedro, &nbsp; lo llevamos asfixiándose por el Covid, &nbsp; fue la respuesta.
     De esta manera se acabó la tomadera.
 </div>
     
